--- a/styles/float-page.css
+++ b/styles/float-page.css
@@ -10,3 +10,16 @@ main {
   margin-left: auto;
   margin-right: auto;
 }
+
+img {
+  width: 300px;
+  float: right;
+  margin: 15px 0px 15px 15px;
+}
+
+img:first-of-type {
+  float: left;
+  margin: 15px 15px 15px 0px;
+}
+
+
